--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "1.0"
 once_cell = "1.19"
 getrandom = "0.2"
 bytes = "1.5"
+futures = "0.3"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
