--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1.19"
 getrandom = "0.2"
 bytes = "1.5"
 futures = "0.3"
+uuid = { version = "1.6", features = ["v4"] }
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
