--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,12 @@ winreg = "0.52"
 [dev-dependencies]
 tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
 tokio-test = "0.4"
+criterion = { version = "0.5", features = ["async_tokio"] }
 
 [lib]
 name = "mime_rs"
 path = "src/lib.rs"
+
+[[bench]]
+name = "benchmarks"
+harness = false
