--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mime_rs-fuzz"
+name = "tokio-mime-fuzz"
 version = "0.0.0"
 authors = ["Automatically generated"]
 publish = false
@@ -11,7 +11,7 @@ cargo-fuzz = true
 [dependencies]
 libfuzzer-sys = "0.4"
 
-[dependencies.mime_rs]
+[dependencies.tokio-mime]
 path = ".."
 
 [[bin]]
