--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "tokio-mime-fuzz"
+name = "yamine-fuzz"
 version = "0.0.0"
-authors = ["Automatically generated"]
 publish = false
 edition = "2021"
 
@@ -11,29 +10,9 @@ cargo-fuzz = true
 [dependencies]
 libfuzzer-sys = "0.4"
 
-[dependencies.tokio-mime]
+[dependencies.yamine]
 path = ".."
 
-[[bin]]
-name = "fuzz_parse_media_type"
-path = "fuzz_targets/fuzz_parse_media_type.rs"
-test = false
-doc = false
-
-[[bin]]
-name = "fuzz_multipart_reader"
-path = "fuzz_targets/fuzz_multipart_reader.rs"
-test = false
-doc = false
-
-[[bin]]
-name = "fuzz_encoded_word"
-path = "fuzz_targets/fuzz_encoded_word.rs"
-test = false
-doc = false
-
-[[bin]]
-name = "fuzz_quoted_printable"
-path = "fuzz_targets/fuzz_quoted_printable.rs"
-test = false
-doc = false
+# Prevent this from interfering with the main workspace
+[workspace]
+members = ["."]
